--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.6.3",
-    "react-native": "0.58.6"
+    "react-native": "0.58.6",
+    "react-native-qrcode": "^0.2.7",
+    "react-native-vector-icons": "^6.3.0",
+    "react-native-video": "^4.4.0",
+    "react-native-video-player": "^0.10.0"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
