--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-qrcode": "^0.2.7",
     "react-native-vector-icons": "^6.3.0",
     "react-native-video": "^4.4.0",
-    "react-native-video-player": "^0.10.0"
+    "react-native-video-player": "^0.10.0",
+    "rn-fetch-blob": "^0.10.15"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
